      to VRAM are always valid. Fixes GRUB bootloader menu when using Bochs VBE.
    - DDC: Added "ddc" parameter to the "vga" option to make it possible
      either to disable the DDC feature or to read the monitor EDID from file.
  - PCI (general)
    - Added config parameter to set up advanced PCI options. Now it is possible
      to disable ACPI or HPET in case the i440FX chipset is selected.
  - USB
    - Added keyboard emulation with most of the keys supported.
    - Added support for USB packet logging in PCAP format.
    - Changed handling of device options in the USB port configuration
      (see bochsrc sample).
  - Sound
    - Added PC speaker volume control for the lowlevel sound support.

- GUI and display libraries
    - Added support for calling a headerbar handler after pressing F7 (enabled
      with "cmdmode" option / present in sdl, sdl2, win32 and x).
    - Added support for saving text mode snapshot in BMP format.
    - Write marker to log file by pressing "m" button (guis with "cmdmode" on).
    - X11 keymaps: added new one for Swiss-German and improved Italian map.
    - RFB / vncsrv: VGA features h/v pel panning and split screen now supported.
    - RFB: added support for the pixel format RGB332.
    - added display library option for disabling the Bochs gui console to use
      the default system console instead (rfb, sdl, sdl2, vncsrv, x).
    - win32: added display library option "autoscale" to scale a small
      simulation window by factor 2, 4 or 8 depending in desktop window size.
    - wx: fixed status bar handling to avoid segfaults and deadlocks.

- VGABIOS
  - LGPL'd VGABIOS updated to version 0.8a.
    - Added initial version of the VGABIOS for Voodoo Banshee adapters.
    - Added 'write character' support for non-VGA 8-bpp modes (Bochs VBE /
      Cirrus / Banshee). Cirrus code uses bitblt engine.
    - Fixed text output and scrolling in VGA graphics modes.
    - Some small fixes in the VBE code and several code optimizations.
